<resources>
    <string name="app_name">Gaggle</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="app_name_lite">Gaggle</string>

    <string name="user_name">User Name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="my_connections">My Connections</string>
    <string name="my_events">My Events</string>
    <string name="area_events">Events in My Area</string>
    <string name="attending_events">Events I\'m Attending</string>
    <string name="invite_friends">Invite Friends!</string>
    <string name="gaggle_stories">Event Stories</string>
    <string name="remove">Don\'t See</string>
    <string name="apply_button">Apply!</string>
    <string name="add_button">Add Members</string>
    <string name="leave_button">Leave</string>
    <string name="event_tab_title">Events</string>
    <string name="group_tab_title">Groups</string>
    <string name="message_tab_title">Messages</string>
    <string name="notification_tab_title">Notifications</string>
    <string name="message_hint">Write a message...</string>
    <string name="account_type">com.gaggle.snoretrain.gaggle</string>
</resources>
